Update font awesome

--- a/main.css
+++ b/main.css
@@ -94,7 +94,7 @@ DEFAULT BOX
   text-transform: uppercase;
 }
 .box h2:before{
-  content: '//';
+  /* content: '//'; */
   margin-right: 5px;
 }
 .box p{
