--- a/main.css
+++ b/main.css
@@ -174,6 +174,12 @@ EDUCATION
   margin-top: 5px;
   padding: 0;
 }
+
+#education .technology {
+  font-style: italic;
+  font-size: 1em;
+}
+
 /*******************************************
 EXPERIENCES
 *******************************************/
