--- a/css/main.css
+++ b/css/main.css
@@ -309,10 +309,10 @@ LANGUAGES
 #language-skills .skill .icons{
   width: 111px;
   height: 14px;
-  background: url(images/star-grey.png) no-repeat;
+  background: url(../images/star-grey.png) no-repeat;
 }
 #language-skills .skill .icons-red{
-  background: url(images/star-red.png) no-repeat;
+  background: url(../images/star-red.png) no-repeat;
 }
 /*******************************************
 HOBBIES
