--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,14 +1,14 @@
 #sidebar-wrapper {
 	position: fixed;
-	width: 200px;
+	width: 240px;
 	float: left;
 	height: 100%;
+	margin-top:-20px;
 	border-right: thick double #e74c3c;
 }
 
-
 #page-content-wrapper {
-	margin-left: 200px;
+	margin-left: 240px;
 }
 
 
@@ -17,12 +17,3 @@
 	list-style: none;
 }
 
-.sidebar-nav li {
-	line-height: 30px;
-}
-
-.sidebar-nav li a {
-    display: block;
-    text-decoration: none;
-    color: #999999;
-}
