--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,5 +1,11 @@
 #wrapper {
 	margin-top:50px;
+	padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    overflow: hidden;
 }
 
 #sidebar-wrapper {
@@ -17,6 +23,7 @@ a.list-group-item {
 	border-radius: 0px;
 }
 
+/* border style in hover sidebar */
 .list-group > a.list-group-item:hover {
 	border-style: solid;
 	border-left-width: 5px;
@@ -30,3 +37,4 @@ a.list-group-item {
 #page-content-wrapper {
 	margin-left: 240px;
 }
+
